// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new value action should update coding value with multiple answers 1`] = `"y"`;

exports[`new value action should update coding value with multiple answers 2`] = `"displayy"`;

exports[`new value action should update coding value with multiple answers 3`] = `2`;

exports[`new value action should update coding value with multiple answers 4`] = `
Object {
  "valueCoding": Object {
    "code": "y",
    "display": "displayy",
  },
}
`;

exports[`new value action should update coding value with multiple answers 5`] = `
Object {
  "valueCoding": Object {
    "code": "n",
    "display": "new display",
  },
}
`;
